fix text responsive on mobile

--- a/Home.css
+++ b/Home.css
@@ -93,6 +93,7 @@
   }
 
   .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
     margin-top: 149px;
     margin-right: 146px;
   }
